# flux-sftp

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  auth.db
src/: config.rs  main.rs  sftp.rs
