[package]
name = "flux-sftp"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
regex = "1.11.1"
russh = "0.52.1"
russh-sftp = "2.1.1"
tokio = { version = "1.45.1", features = ["full"]  }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "sqlite", "mysql" ] }
toml = "0.8.23"
serde = "1.0.219"
bcrypt = "0.17.0"
